# tour_cpp

./: .gitignore  README.md
basic/.cache/clangd/index/: main.cpp.CA08DCF149FAF934.idx
src/: file.h  generic.cpp  generic.h  main.cpp  objectbase.h  temp.h
view/HelloWorld/: CMakeLists.txt
view/HelloWorld/.cache/clangd/index/: main.cpp.9AA4CA1EB1ECC2D7.idx
view/basic/: CMakeLists.txt
view/basic/.cache/clangd/index/: file.cpp.50E18AF0B1A014B9.idx  func.cpp.A0696B9EDE0FBBE3.idx  main.cpp.6638E29B21F83E6C.idx
view/basic/src/: file.cpp  func.cpp  func.h  generic.cpp  generic.h  main.cpp  objectbase.cpp
